<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="is_full_switch"
        android:summary="@string/pref_description_easy_full"
        android:title="@string/pref_title_easy_full" />

    <ListPreference
        android:defaultValue="4"
        android:entries="@array/pref_choices_list_entries"
        android:entryValues="@array/pref_choices_list_values"
        android:key="choices_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_choices_title" />

    <ListPreference
        android:defaultValue="50"
        android:entries="@array/pref_count_list_entries"
        android:entryValues="@array/pref_count_list_values"
        android:key="count_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_count_title" />

</PreferenceScreen>
